Fixed header to fit better on mobile devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,6 +53,11 @@ h1.text-block {
     background-position: center;
 }
 
+@media(max-width: 488px) {
+    h1.text-block {
+        height: 93vh;
+    }
+}
 
 
 /***** Services Section Styles ******/
